# lp2e

lp2e/: LICENSE  setup.cfg
lp2e/src/mypackage/: github.py  main.py  test.txt
lp2e/src/sb_lp2e.egg-info/: PKG-INFO  SOURCES.txt
